--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,33 @@
 pipeline {
     agent any
+
+    environment {
+        NODE_VERSION = '14.x'
+    }
+    
     stages {
+
+        stage('Checkout') {
+            steps {
+                // Checkout the code from your version control
+                checkout scm
+            }
+        }
+        stage('Install Node.js') {
+            steps {
+                // Install Node.js using Node Version Manager (NVM)
+                sh 'curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash'
+                sh '. ~/.nvm/nvm.sh && nvm install $NODE_VERSION'
+                sh '. ~/.nvm/nvm.sh && nvm use $NODE_VERSION'
+            }
+        }
+        stage('Install Dependencies') {
+            steps {
+                // Install dependencies
+                sh '. ~/.nvm/nvm.sh && npm install'
+            }
+        }
+
         stage('Build') {
             steps {
                 sh 'npm install'
