--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,17 +2,10 @@ pipeline {
     agent any
 
     environment {
-        NODE_VERSION = '1.1.12'
+        NODE_VERSION = '14.x'
     }
     
     stages {
-
-        stage('Checkout') {
-            steps {
-                // Checkout the code from your version control
-                checkout scm
-            }
-        }
         stage('Install Node.js') {
             steps {
                 // Install Node.js using Node Version Manager (NVM)
