--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,29 +1,10 @@
 pipeline {
     agent any
-
-    environment {
-        NODE_VERSION = '20.15.0'
-    }
     
     stages {
-        stage('Install Node.js') {
-            steps {
-                // Install Node.js using Node Version Manager (NVM)
-                sh 'curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash'
-                sh '. ~/.nvm/nvm.sh && nvm install $NODE_VERSION'
-                sh '. ~/.nvm/nvm.sh && nvm use $NODE_VERSION'
-            }
-        }
-        stage('Install Dependencies') {
-            steps {
-                // Install dependencies
-                sh '. ~/.nvm/nvm.sh && npm install'
-            }
-        }
-
         stage('Build') {
             steps {
-                sh '. ~/.nvm/nvm.sh && npm install'
+                sh 'npm install --force'
             }
         }
         stage('Test') {
