--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,13 @@
 pipeline {
     agent any
-    
+
     stages {
+        stage('Setup') {
+            steps {
+                sh 'curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -'
+                sh 'sudo apt-get install -y nodejs'
+            }
+        }
         stage('Build') {
             steps {
                 sh 'npm install --force'
