--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,13 +1,11 @@
 pipeline {
     agent any
 
+    tools {
+        nodejs 'Node' // This should match the name you gave your NodeJS installation
+    }
+
     stages {
-        stage('Setup') {
-            steps {
-                sh 'curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -'
-                sh 'sudo apt-get install -y nodejs'
-            }
-        }
         stage('Build') {
             steps {
                 sh 'npm install --force'
